--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,33 +8,35 @@
   <h3>Property<span>Management</span></h3>
 
   <p class="footer-links">
-    <a href="#">Home</a>
+    <a [routerLink]="['/home']" >หน้าแรก</a>
     ·
-    <a href="#">Blog</a>
+    <a [routerLink]="['/houses']">อสังหาสิ่งปลูกสร้าง</a>
     ·
-    <a href="#">Pricing</a>
+    <a [routerLink]="['/lands']">ที่ดิน</a>
+    ·<br>
+    <a [routerLink]="['/groups']">กลุ่ม</a>
     ·
-    <a href="#">About</a>
+    <a [routerLink]="['/recommend']">แนะนำ</a>
     ·
-    <a href="#">Faq</a>
+    <a [routerLink]="['/addhouse']">เพิ่มอสังหาสิ่งปลูกสร้าง</a>
     ·
-    <a href="#">Contact</a>
+    <a [routerLink]="['/addlands']">เพิ่มที่ดิน</a>
   </p>
 
-  <p class="footer-company-name">Property Management &copy; 2018</p>
+  <p class="footer-company-name">Property Management &copy; 2018 - 2019</p>
 </div>
 
 <div class="footer-center">
 
   <div>
-    <i class="fa fa-map-marker"></i>
-    <p><span>มหาวิทยาลัยแม่ฟ้าหลวง 333 หมู่ 1 ท่าสุด เมือง </span> เชียงราย, ไทย</p>
+   
+    <p> <span><i class="fa fa-map-marker"></i> มหาวิทยาลัยแม่ฟ้าหลวง 333 หมู่ 1 ท่าสุด เมือง <br> เชียงราย, ไทย </span></p>
   </div>
 
 
   <div>
-    <i class="fa fa-envelope"></i>
-    <p><a href="mailto:tempbeer@live.com">Property@gmail.com</a></p>
+    
+    <p><span><i class="fa fa-envelope"></i><a href="mailto:propertymbinc@gmail.com"> propertymbinc@gmail.com</a></span></p>
   </div>
 
 </div>
