--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-    <img src="https://i.imgur.com/q3F1dTW.jpg" alt="index.png"   style="width:100%;" class="img-fluid">
+    <img src="http://www.landvist.xyz/assets/indexpage.png" alt="indexpage.png"   style="width:100%;" class="img-fluid">
 
 
 <app-footer></app-footer>      
