--- a/src/app/components/lands/lands-detail/lands-detail.component.html
+++ b/src/app/components/lands/lands-detail/lands-detail.component.html
@@ -131,7 +131,7 @@
 
                   <div class="container">
                     <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                         <div class="header-blog">รายละเอียดที่ดิน</div>
                         <ul>
                           <li>
@@ -153,7 +153,7 @@
                           </li>
                         </ul>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-12">
                         <div class="header-blog">รายละเอียดเพิ่มเติม</div>
                         <p>{{lands.MoreDetails}}</p>
                       </div>
@@ -197,7 +197,7 @@
                                   <div class="specificate-panel">
                                     <div class="specificate-list">
                                       <div class="specificate-title">สถานะ</div>
-                                      <div class="specificate-info">{{lands.CountactS}}</div>
+                                      <div class="specificate-info">{{conS1}}</div>
                                     </div>
                                   </div>
                                 </div>
@@ -257,7 +257,7 @@
                                   <div class="specificate-panel">
                                     <div class="specificate-list">
                                       <div class="specificate-title">สถานะ</div>
-                                      <div class="specificate-info">{{lands.CountactS}}</div>
+                                      <div class="specificate-info">{{conS2}}</div>
                                     </div>
                                   </div>
                                 </div>
@@ -317,7 +317,7 @@
                                   <div class="specificate-panel">
                                     <div class="specificate-list">
                                       <div class="specificate-title">สถานะ</div>
-                                      <div class="specificate-info">{{lands.CountactS}}</div>
+                                      <div class="specificate-info">{{conS3}}</div>
                                     </div>
                                   </div>
                                 </div>
