--- a/src/app/components/login/resetpassword/resetpassword.component.css
+++ b/src/app/components/login/resetpassword/resetpassword.component.css
@@ -1,13 +1,9 @@
-.f{
-    font-size: 13px;
-}
-
 input
     {
         border-radius: 30px 30px 30px 30px;
-        padding: 20px; 
-        width: 300px;
-        height: 40px; 
+    }
+select{
+        border-radius: 30px 30px 30px 30px;
     }
 .PMB{
         font-family: 'Poppins', 'Prompt', sans-serif;
