--- a/src/app/components/profile/updateprofile/updateprofile.component.css
+++ b/src/app/components/profile/updateprofile/updateprofile.component.css
@@ -1,7 +1,24 @@
 .PMB{
     font-family: 'Poppins', 'Prompt', sans-serif;
 }
-
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;   
+  cursor: inherit;
+  display: block;
+}
 #breadcrumb-nav{
     list-style: none;
     margin: 0px;
@@ -54,3 +71,16 @@
     font-size: 12px;
     line-height: 1.42857;
 }
+
+
+.current-section {
+    background-color: cornflowerblue
+  }
+  .current-section::after { 
+    content: "\039e";
+    background-color: yellow; 
+    color: red;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-left: 0.5rem;
+  }
