--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,7 +1,11 @@
 input
     {
         border-radius: 30px 30px 30px 30px;
-        padding: 20px; 
-        width: 300px;
-        height: 40px; 
     }
+select{
+    border-radius: 30px 30px 30px 30px;
+}
+
+.PMB{
+    font-family: 'Poppins', 'Prompt', sans-serif;
+}
