--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,5 +1,14 @@
 <app-navbar></app-navbar>
-    <img src="http://www.landvist.xyz/assets/indexpage.png" alt="indexpage.png"   style="width:100%;" class="img-fluid">
+    <div class="parallax1"></div>
+    <img  src="../../../assets/Untitled-2.png" alt="index.png"   style="width:100%;" >
+    <img  src="../../../assets/Untitled-3.png" alt="index.png"   style="width:100%;" >
+    <div>
+    <img class="inline-photo show-on-scroll" src="../../../assets/Untitled-7.png" alt="index.png"   style="width:40%;" >
+    <img class="inline-photo show-on-scroll" src="../../../assets/Untitled-7.1.png" alt="index.png"   style="width:40%;" >
+    <img class="inline-photo show-on-scroll" src="../../../assets/Untitled-7.2.png" alt="index.png"   style="width:40%;" >
+    </div>
+    <img  src="../../../assets/Untitled-5.png" alt="index.png"   style="width:100%;" >
+    <img  src="../../../assets/Untitled-6.png" alt="index.png"   style="width:100%;" >
 
 
 <app-footer></app-footer>      
