--- a/src/app/components/addhouse/uploadimg/uploadimg.component.html
+++ b/src/app/components/addhouse/uploadimg/uploadimg.component.html
@@ -7,6 +7,7 @@
           <div class="row">
             <div class="col-md-12">
               <h4>เพิ่มรูปภาพ</h4>
+              <a href="">{{ID_Property}}</a>
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">อัพโหลด</span>
