--- a/src/app/components/addlands/addlands.component.html
+++ b/src/app/components/addlands/addlands.component.html
@@ -397,35 +397,35 @@
                           <h4>ทำเล</h4>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="Blind" formControlName="Blind"
-                              [(ngModel)]="credentials.Blind">ที่ตาบอด
+                              [(ngModel)]="credentials.Blind"> ที่ตาบอด
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" formControlName="Neareducation" name="Neareducation"
-                              [(ngModel)]="credentials.Neareducation">ใกล้สถานศึกษา
+                              [(ngModel)]="credentials.Neareducation"> ใกล้สถานศึกษา
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="Cenmarket" formControlName="Cenmarket"
-                              [(ngModel)]="credentials.Cenmarket">ใกล้ศูนย์การค้า
+                              [(ngModel)]="credentials.Cenmarket"> ใกล้ศูนย์การค้า
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="Market" formControlName="Market"
-                              [(ngModel)]="credentials.Market">ใกล้ตลาด
+                              [(ngModel)]="credentials.Market"> ใกล้ตลาด
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="River" formControlName="River"
-                              [(ngModel)]="credentials.River">ติดแม่น้ำ
+                              [(ngModel)]="credentials.River"> ติดแม่น้ำ
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="Mainroad" formControlName="Mainroad"
-                              [(ngModel)]="credentials.Mainroad">ติดถนน
+                              [(ngModel)]="credentials.Mainroad"> ติดถนน
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="Insoi" formControlName="Insoi"
-                              [(ngModel)]="credentials.Insoi">อยู่ในซอย
+                              [(ngModel)]="credentials.Insoi"> อยู่ในซอย
                           </div>
                           <div class="col-sm-12">
                             <input type="checkbox" id="" value="1" name="onther" formControlName="onther"
-                              [(ngModel)]="onther">อื่นๆ
+                              [(ngModel)]="onther"> อื่นๆ
                           </div>
                           <div *ngIf="onther" class="col-sm-12">
                             <input style="border-radius: 30px 30px 30px 30px;" type="text" formControlName="Letc"
@@ -437,19 +437,19 @@
                           <h4>สถานะถนน</h4>
                           <div class="col-sm-12">
                             <input type="radio" id="" value="โคลน" name="RoadType" formControlName="RoadType"
-                              [(ngModel)]="credentials.RoadType">โคลน
+                              [(ngModel)]="credentials.RoadType"> โคลน
                           </div>
                           <div class="col-sm-12">
                             <input type="radio" id="" value="ยางมะตอย" checked name="RoadType"
-                              formControlName="RoadType" [(ngModel)]="credentials.RoadType">ยางมะตอย
+                              formControlName="RoadType" [(ngModel)]="credentials.RoadType"> ยางมะตอย
                           </div>
                           <div class="col-sm-12">
                             <input type="radio" id="" value="คอนกรีต" name="RoadType" formControlName="RoadType"
-                              [(ngModel)]="credentials.RoadType">คอนกรีต
+                              [(ngModel)]="credentials.RoadType"> คอนกรีต
                           </div>
                           <div class="col-sm-12">
                             <input type="radio" id=" " value="1" name="Ronther" formControlName="Ronther"
-                              [(ngModel)]="Ronther">อื่นๆ
+                              [(ngModel)]="Ronther"> อื่นๆ
                           </div>
                           <div *ngIf="Ronther == '1' " class="col-sm-12">
                             <input style="border-radius: 30px 30px 30px 30px;" type="text" id="RoadType"
@@ -479,11 +479,11 @@
                             <div class="row">
                               <div class="col-sm-6">
                                 <input type="radio" id="GroundLevel" value="สูงกว่าถนน" name="GroundLevel"
-                                  formControlName="GroundLevel" [(ngModel)]="credentials.GroundLevel">สูงกว่าถนน
+                                  formControlName="GroundLevel" [(ngModel)]="credentials.GroundLevel"> สูงกว่าถนน
                               </div>
                               <div class="col-sm-6">
                                 <input type="radio" id="GroundLevellow" value="ต่ำกว่าถนน" name="GroundLevel"
-                                  formControlName="GroundLevel" [(ngModel)]="credentials.GroundLevel">ต่ำกว่าถนน
+                                  formControlName="GroundLevel" [(ngModel)]="credentials.GroundLevel"> ต่ำกว่าถนน
                               </div>
 
                             </div>
@@ -965,6 +965,10 @@
                   [disabled]="credentials.ID_Lands == ''">
                   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> ถัดไป
                 </button>
+                <button class="btn btn-primary float-right" type="button" awNextStep
+               >
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> ถัดไป
+              </button>
               </div>
             </div>
           </div>
@@ -1031,25 +1035,25 @@
                       <div class="specificate-panel">
                         <div class="specificate-list">
                           <div class="specificate-title">ราคาขาย</div>
-                          <div class="specificate-info">{{ credentials.SellPrice | number}} บาท</div>
+                          <div class="specificate-info">{{ credentials.SellPrice }} บาท</div>
                         </div>
                         <div class="specificate-list">
                           <div class="specificate-title">ธนาคารประเมิน</div>
-                          <div class="specificate-info">{{ credentials.CostestimateB | number }} บาท
+                          <div class="specificate-info">{{ credentials.CostestimateB  }} บาท
                           </div>
                         </div>
                         <div class="specificate-list">
                           <div class="specificate-title">กรมที่ดินประเมิน</div>
-                          <div class="specificate-info">{{ credentials.Costestimate | number}} บาท
+                          <div class="specificate-info">{{ credentials.Costestimate}} บาท
                           </div>
                         </div>
                         <div class="specificate-list">
                           <div class="specificate-title">ราคาตลาด</div>
-                          <div class="specificate-info">{{ credentials.MarketPrice | number}} บาท</div>
+                          <div class="specificate-info">{{ credentials.MarketPrice}} บาท</div>
                         </div>
                         <div class="specificate-list">
                           <div class="specificate-title">ราคาต่อตารางวา</div>
-                          <div class="specificate-info">{{ credentials.PriceWA | number}} บาท</div>
+                          <div class="specificate-info">{{ credentials.PriceWA | number }} บาท</div>
                         </div>
                       </div>
                     </div>
