--- a/src/app/components/houses/houses-detail/houses-detail.component.css
+++ b/src/app/components/houses/houses-detail/houses-detail.component.css
@@ -31,9 +31,7 @@ gallery{
   box-shadow:rgb(224, 199, 199) 1px 1px 8px 1px;      
   cursor: pointer      
      }      
- .modal-content {      
-   width: 1000px !important;      
- }      
+     
  ul { padding:0; width:1200px; margin:20px auto;margin-left: 80px}      
  li { display:inline;}  
 hr {
@@ -182,25 +180,13 @@ input[type=radio] {
   height: 100%;
 }
 
-html.disabled #modal-bg{
-  display: block;
-}
+
 
 .not-allow{
   pointer-events: none;
   cursor: not-allowed;
 }
 
-#modal-bg{
-  display: none;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  background-color: rgba(0,0,0,0.75);
-  z-index: 99;
-}
 
 
 #content-container{
@@ -10070,129 +10056,8 @@ html {
     background: transparent;
     border: 0;
   }
-  .modal-open {
-    overflow: hidden;
-  }
-  .modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1050;
-    display: none;
-    overflow: hidden;
-    -webkit-overflow-scrolling: touch;
-    outline: 0;
-  }
-  .modal.fade .modal-dialog {
-    -webkit-transition: -webkit-transform .3s ease-out;
-         -o-transition:      -o-transform .3s ease-out;
-            transition:         transform .3s ease-out;
-    -webkit-transform: translate(0, -25%);
-        -ms-transform: translate(0, -25%);
-         -o-transform: translate(0, -25%);
-            transform: translate(0, -25%);
-  }
-  .modal.in .modal-dialog {
-    -webkit-transform: translate(0, 0);
-        -ms-transform: translate(0, 0);
-         -o-transform: translate(0, 0);
-            transform: translate(0, 0);
-  }
-  .modal-open .modal {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-  .modal-dialog {
-    position: relative;
-    width: auto;
-    margin: 10px;
-  }
-  .modal-content {
-    position: relative;
-    background-color: #fff;
-    -webkit-background-clip: padding-box;
-            background-clip: padding-box;
-    border: 1px solid #999;
-    border: 1px solid rgba(0, 0, 0, .2);
-    border-radius: 6px;
-    outline: 0;
-    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
-            box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
-  }
-  .modal-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1040;
-    background-color: #000;
-  }
-  .modal-backdrop.fade {
-    filter: alpha(opacity=0);
-    opacity: 0;
-  }
-  .modal-backdrop.in {
-    filter: alpha(opacity=50);
-    opacity: .5;
-  }
-  .modal-header {
-    padding: 15px;
-    border-bottom: 1px solid #e5e5e5;
-  }
-  .modal-header .close {
-    margin-top: -2px;
-  }
-  .modal-title {
-    margin: 0;
-    line-height: 1.42857143;
-  }
-  .modal-body {
-    position: relative;
-    padding: 15px;
-  }
-  .modal-footer {
-    padding: 15px;
-    text-align: right;
-    border-top: 1px solid #e5e5e5;
-  }
-  .modal-footer .btn + .btn {
-    margin-bottom: 0;
-    margin-left: 5px;
-  }
-  .modal-footer .btn-group .btn + .btn {
-    margin-left: -1px;
-  }
-  .modal-footer .btn-block + .btn-block {
-    margin-left: 0;
-  }
-  .modal-scrollbar-measure {
-    position: absolute;
-    top: -9999px;
-    width: 50px;
-    height: 50px;
-    overflow: scroll;
-  }
-  @media (min-width: 768px) {
-    .modal-dialog {
-      width: 600px;
-      margin: 30px auto;
-    }
-    .modal-content {
-      -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-              box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-    }
-    .modal-sm {
-      width: 300px;
-    }
-  }
-  @media (min-width: 992px) {
-    .modal-lg {
-      width: 900px;
-    }
-  }
+
+  
   .tooltip {
     position: absolute;
     z-index: 1070;
@@ -10692,11 +10557,7 @@ html {
   .pager:before,
   .pager:after,
   .panel-body:before,
-  .panel-body:after,
-  .modal-header:before,
-  .modal-header:after,
-  .modal-footer:before,
-  .modal-footer:after {
+  .panel-body:after {
     display: table;
     content: " ";
   }
@@ -10713,9 +10574,7 @@ html {
   .navbar-header:after,
   .navbar-collapse:after,
   .pager:after,
-  .panel-body:after,
-  .modal-header:after,
-  .modal-footer:after {
+  .panel-body:after {
     clear: both;
   }
   .center-block {
