--- a/src/app/components/houses/houses-detail/houses-detail.component.html
+++ b/src/app/components/houses/houses-detail/houses-detail.component.html
@@ -43,9 +43,36 @@
                   </button>
                 </div>
                 <div class="col-md-6">
-                  <button class="btn btn-danger"[routerLink]="['/houseUpdateA/',house.ID_Property]" >
+                  <!-- Button trigger modal -->
+                  <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter">
                     <i class="fas fa-trash-alt"></i> ลบอสังหานี้
                   </button>
+
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalCenterTitle">ต้องการลบอังหานี้ใช่หรือไม่?</h5>
+                        </div>
+                        <div class="modal-body">
+                          <div class="text-center">
+                          <div class="col-md-6">
+                              <button type="button" class="btn btn-success"  data-dismiss="modal" (click)="onDelete()">
+                                  <i class="fas fa-trash-alt"></i> ยืนยัน
+                                </button> 
+                          </div>
+                          <div class="col-md-6">
+                              <button type="button" class="btn btn-danger"  data-dismiss="modal">
+                                   ยกเลิก
+                                </button> 
+                          </div>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -79,6 +106,7 @@
 
           </div>
         </div>
+        <hr>
         <div id="product-specificate">
 
           <!-- Tab panes -->
@@ -502,7 +530,7 @@
               </div>
               <hr>
               <div class="col-xs-12 " *ngIf="house.PropertyType == 'บ้าน' || house.PropertyType =='อาคารพาณิชย์'">
-                <h3>สิ่งอำนวยความสดวก</h3>
+                <h3>สิ่งอำนวยความสะดวก</h3>
                 <div class="container ">
                   <div class="row">
                     <div class=" col-md-6">
