--- a/src/app/components/index/index.component.css
+++ b/src/app/components/index/index.component.css
@@ -1,4 +1,73 @@
+.parallax1 {
+	/* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 
+.parallax1{
+/* The image used */
+background-image: url("../../../assets/Untitled-1.png"); 
+/* Set a specific height */
+min-height: 1000px;
+}
+
+/*Scroll down css*/
+.inline-photo {
+	border: 1em solid #fff;
+	border-bottom: 4em solid #fff;
+	border-radius: .25em;
+	/*box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);*/
+	margin: 2em auto;
+	opacity: 0;
+	/*transform: translateY(4em) rotateZ(-5deg);*/
+	transform: translateY(3em) rotateZ(0deg);
+	transition: transform 4s .3s cubic-bezier(0,1,.3,1),
+				opacity .3s .3s ease-out;
+	max-width: 600px;
+	width: 90%;
+	will-change: transform, opacity;
+  }
+  
+  .inline-photo.is-visible {
+	opacity: 1;
+	transform: rotateZ(0deg);
+  }
+  
+  header {
+	opacity: 0;
+	transition: opacity .5s .25s ease-out;
+  }
+  
+  header.is-visible {
+	opacity: 1;
+  }
+  
+  .main-photo {
+	transform: scale(.8);
+  }
+  
+  .heading {
+	transform: translate(-50%, calc(-50% + 1em));
+  }
+  
+  .is-visible .main-photo {
+	transform: none;
+  }
+  
+  .is-visible .heading {
+	transform: translate(-50%, -50%);
+  }
+  
+  .main-photo,
+  .heading {
+	transition: transform 4s .25s cubic-bezier(0,1,.3,1),
+				filter 10s 2s ease-out;
+	will-change: transform;
+  }
+
+/*footer*/
 .footer-distributed{
 	background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
