--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
               <a class="nav-link " routerLink="/home">หน้าแรก <span class="sr-only">(current)</span></a>
             </li>
             <li *ngIf="auth.isLoggedIn()" class="nav-item ">
-                <a class="nav-link" routerLink="/houses"><i class="fa fa-home font-color-orange" aria-hidden="true"></i> อสังหาของฉัน<span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLink="/houses"><i class="fa fa-home font-color-orange" aria-hidden="true"></i> อสังหาสิ่งปลูกสร้างของฉัน<span class="sr-only">(current)</span></a>
               </li>
               <li *ngIf="auth.isLoggedIn()" class="nav-item ">
                   <a class="nav-link" routerLink="/lands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i> ที่ดินของฉัน<span class="sr-only">(current)</span></a>
@@ -24,11 +24,11 @@
                   <a class="nav-link" routerLink="/recommend"><i class="fa fa-star font-color-gold" aria-hidden="true"></i> แนะนำ<span class="sr-only">(current)</span></a>
                 </li>
               <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-plus-circle"></i> 
                     เพิ่มอสังหาริมทรัพย์
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" routerLink="/addhouse"><i class="fa fa-home font-color-orange "  aria-hidden="true"></i> บ้าน</a>
+                    <a class="dropdown-item" routerLink="/addhouse"><i class="fa fa-home font-color-orange "  aria-hidden="true"></i> อสังหาสิ่งปลูกสร้าง</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="/addlands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i> ที่ดิน</a>
                    
