--- a/src/app/components/lands/lands-pdf/lands-pdf.component.html
+++ b/src/app/components/lands/lands-pdf/lands-pdf.component.html
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col-md-8 border border-dark">
         <div id="parentdiv" #parentdiv>
-          <header class="text-center"> <img src="http://www.landvist.xyz/images/Defult/Navbar.png" width="200"
+          <header class="text-center"> <img src="../../../../assets/Navbar.png" width="200"
               height="200" alt=""></header>
           <div class="logo-distributed text-center ">
             <h3>Property<span>Management</span></h3>
