--- a/src/app/components/houses/house-pdf/house-pdf.component.html
+++ b/src/app/components/houses/house-pdf/house-pdf.component.html
@@ -43,7 +43,7 @@
       <div class="col-md-8 border border-dark">
         <div id="parentdiv" #parentdiv >
           <div id="specificate">
-          <header class="text-center"> <img src="http://www.landvist.xyz/images/Defult/Navbar.png" width="200"
+          <header class="text-center"> <img src="../../../../assets/Navbar.png" width="200"
               height="200" alt=""></header>
           <div class="logo-distributed text-center ">
             <h3>Property<span>Management</span></h3>
